--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "next": "14.2.13",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "sass": "^1.79.4"
