--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
-    "next": "14.2.13",
+    "axios-retry": "^4.5.0",
+    "lodash": "^4.17.21",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-window": "^1.8.10",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
